fixed issue with alignment of about card

--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -50,4 +42,13 @@ img {
 
 h1 {
   color: rgb(69, 140, 182);
+}
+
+
+a {
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #53babc;
 }
